# dress-up

./: Cargo.toml  README.md  prek.toml
examples/: display.rs
examples/dump_manifest/: Cargo.toml  input.hex
examples/dump_manifest/src/: main.rs
examples/minimal/: Cargo.toml  README.md  public.pem  suit.cbor
examples/minimal/src/: main.rs
src/: auth.rs  command.rs  component.rs  consts.rs  digest.rs  error.rs  lib.rs  manifest.rs  manifeststate.rs  operatinghooks.rs  report.rs
