[package]
name = "dress-up"
version = "0.1.0"
edition = "2021"
description = "`no-std` SUIT manifest parser"
homepage = "https://github.com/ariel-os/dress-up/"
repository = "https://github.com/ariel-os/dress-up/"
license = "MIT OR Apache-2.0"
keywords = ["suit", "updates", "cbor"]
categories = ["embedded", "no-std"]

[dependencies]
ctutils = "0.4.0"
digest = { version = "0.10.7", default-features = false }
generic-array = { version = "1.3.5", features = ["const-default"] }
heapless = { version = "0.9.1", default-features = false }
itertools = { version = "0.14.0", default-features = false }
minicbor = { version = "2.2.1", default-features = false, features = ["half"] }
num_enum = { version = "0.7.5", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
sha3 = { version = "0.10.8", default-features = false, optional = true }
uuid = { version = "1.18.1", default-features = false }

[dev-dependencies]
cbor-edn = { version = "0.0.9", default-features = false }
cose-rust = "0.1.8"
hex = "0.4.3"
openssl = "0.10.75"

[features]
default = ["sha384", "sha512", "shake128", "shake256"]
sha384 = []
sha512 = []
shake128 = ["dep:sha3"]
shake256 = ["dep:sha3"]
