[package]
name = "example-suit-manifest-printer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dress-up = { path = "../.." }
clap = { version = "4.5.51", features = ["derive"] }
uuid = { version = "1.18.1", default-features = false }
generic-array = { version = "1.3.5", features = ["const-default"] }
