[package]
name = "minimal-dress-up"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
dress-up = { path = "../.." }
clap = { version = "4.5.51", features = ["derive"] }
uuid = "1.21.0"
generic-array = { version = "1.3.5", features = ["const-default"] }
cose-rust = "0.1.8"
openssl = "0.10.75"
